reorganise and refactor code to be able to define different sites with individual protection and upstream settings.