@@ -20,8 +20,10 @@ import org.yaml.snakeyaml.introspector.BeanAccess;
 import org.yaml.snakeyaml.representer.Representer;
 
 import javax.net.ssl.SSLException;
-import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
 import java.io.IOException;
+import java.io.InputStream;
 import java.util.HashSet;
 import java.util.Set;
 
@@ -32,6 +34,7 @@ public class Proxy implements ProxyContext {
 
   ProxyLogger LOG = ProxyLogger.get(Proxy.class);
 
+  private final Dummy404Handler dummy404Handler = new Dummy404Handler();
   private final TrackIngressConnectionsHandler trackIngressConnectionsHandler;
   private final ProxyMetrics metrics = new ProxyMetrics();
   private final ProxyConfig config;
@@ -40,50 +43,58 @@ public class Proxy implements ProxyContext {
   private final AdmissionHandler admissionHandler;
   private final SslContext sslContext;
   private final Mapping<String, SslContext> sniMapping;
-  private final SkippingChannelInboundHandlerAdapter redirectHandler;
+  private final UnservicedHostHandler unservicedHostHandler;
   // private final DownstreamHandler downstreamHandler;
-  private final UpstreamRouter upstreamRouter;
+  // private final UpstreamRouter upstreamRouter;
   private final IpTraitsLookup ipTraitsLookup;
   private final EventLoopGroup eventLoopGroup;
   private final RequestLogger requestLogger;
   private final SanitizeHostHandler sanitizeHostHandler;
+  private final SiteSelectorHandler siteSelectorHandler;
 
-  public Proxy(ProxyConfig proxyConfig) {
-    dumpConfig(proxyConfig);
-    if (proxyConfig.listen().connection() == null) {
+  public Proxy(ProxyConfig config) {
+    if (config.listen() == null) {
+      throw new IllegalArgumentException("Missing listen configuration");
+    }
+    if (config.listen().connection() == null) {
       connectionConfig = ConnectionConfig.DEFAULT;
     } else {
-      connectionConfig = proxyConfig.listen().connection();
+      connectionConfig = config.listen().connection();
     }
     eventLoopGroup = new MultiThreadIoEventLoopGroup(NioIoHandler.newFactory());
-    config = proxyConfig;
+    this.config = config;
     metricsBridge = initializeMetrics();
     metricsBridge.expose(metrics);
     trackIngressConnectionsHandler = metricsBridge.expose(new  TrackIngressConnectionsHandler());
-    admissionHandler = new AdmissionHandler(proxyConfig.admission());
-    metricsBridge.expose(admissionHandler);
+    if (config.admission() != null) {
+      admissionHandler = metricsBridge.expose(new AdmissionHandler(config.admission()));
+    } else {
+      admissionHandler = null;
+    }
     sslContext = initializeSslContext();
     sniMapping = initializeSniMapping();
-    Set<String> servicedHosts = new HashSet<>();
-    redirectHandler = proxyConfig.redirect() != null ? new UnservicedHandler(proxyConfig.redirect()) : null;
-    if (proxyConfig.redirect() != null) {
-      servicedHosts.addAll(proxyConfig.redirect().passDomains());
+    siteSelectorHandler = new SiteSelectorHandler(this, config);
+    Set<String> servicedHosts = siteSelectorHandler.getServicedHosts();
+    Set<String> knownHosts = new HashSet<String>();
+    knownHosts.addAll(servicedHosts);
+    if (config.listen().hosts() != null) {
+      knownHosts.addAll(config.listen().hosts());
     }
-    // downstreamHandler = new DownstreamHandler(proxyConfig);
-    if (proxyConfig.upstream().size() == 1) {
-      Upstream upstream = new DefaultUpstream(this, proxyConfig.upstream().getFirst());
-      upstreamRouter = request -> upstream;
-    } else {
-      upstreamRouter = new HostBasedUpstreamRouter(this, proxyConfig.upstream());
-      servicedHosts.addAll(((HostBasedUpstreamRouter) upstreamRouter).getServicedHosts());
+    UnservicedHostConfig unservicedHostConfig = config.unservicedHost() != null ? config.unservicedHost() : UnservicedHostConfig.builder().build();
+    if (unservicedHostConfig.servicedDomains() == null) {
+      unservicedHostConfig =
+        unservicedHostConfig.toBuilder()
+          .servicedDomains(servicedHosts)
+          .build();
     }
-    sanitizeHostHandler = new SanitizeHostHandler(servicedHosts);
+    unservicedHostHandler = new UnservicedHostHandler(unservicedHostConfig);
+    sanitizeHostHandler = new SanitizeHostHandler(knownHosts);
     requestLogger = new DistributingRequestLogger(
       new StandardOutRequestLogger(),
       metricsBridge.expose(new ExposeRequestCountPerStatusCodeHandler()));
     try {
-      if (proxyConfig.ipLookup() != null) {
-        ipTraitsLookup = new CombinedIpTraitsLookup(proxyConfig.ipLookup());
+      if (config.ipLookup() != null) {
+        ipTraitsLookup = new CombinedIpTraitsLookup(config.ipLookup());
       } else {
         ipTraitsLookup = (builder, address) -> { };
       }
@@ -126,11 +137,14 @@ public class Proxy implements ProxyContext {
   }
 
   Mapping<String, SslContext> initializeSniMapping() {
-    var domains = config.listen().domains();
+    var domains = config.listen().hosts();
     var snis = config.listen().sni();
     var defaultContext = initializeSslContext();
     if (defaultContext == null && snis != null) {
-      defaultContext = createSslContext(snis.get(0).ssl());
+      defaultContext = createSslContext(snis.getFirst().ssl());
+    }
+    if (defaultContext == null) {
+      throw new IllegalArgumentException("SSL setup missing");
     }
     var builder = new DomainWildcardMappingBuilder<>(defaultContext);
     if (domains != null) {
@@ -149,64 +163,54 @@ public class Proxy implements ProxyContext {
 
   SslContext createSslContext(SslConfig cfg) {
     try {
-      return SslContextBuilder.forServer(new File(cfg.cert()), new File(cfg.key()))
+      return SslContextBuilder.forServer(open(cfg.cert()), open(cfg.key()))
         .clientAuth(ClientAuth.NONE)
         .sslProvider(SslProvider.OPENSSL)
         .build();
     } catch (SSLException e) {
       throw new RuntimeException(e);
+    } catch (IOException e) {
+      throw new IllegalArgumentException("file not found", e);
+    }
+  }
+
+  static InputStream open(String location) throws IOException {
+    final String prefix = "classpath:";
+    if (location.startsWith(prefix)) {
+      String path = location.substring(prefix.length());
+      if (path.startsWith("/")) {
+        path = path.substring(1);
+      }
+      InputStream in = Proxy.class.getClassLoader().getResourceAsStream(path);
+      if (in == null) {
+        throw new FileNotFoundException("Class path resource not found: " + path);
+      }
+      return in;
+    } else {
+      return new FileInputStream(location);
     }
   }
 
   public void start() throws Exception {
+    dumpConfig(config);
     EventLoopGroup bossGroup = new MultiThreadIoEventLoopGroup(1, NioIoHandler.newFactory());
-    EventLoopGroup workerGroup = new MultiThreadIoEventLoopGroup(NioIoHandler.newFactory());
     try {
       ServerBootstrap sb = new ServerBootstrap();
-      sb.group(bossGroup, workerGroup)
+      sb.group(bossGroup, eventLoopGroup)
         .channel(NioServerSocketChannel.class)
         // .option(ChannelOption.SO_SNDBUF, 1 * 1024) // testing
         .childHandler(new ChannelInitializer<SocketChannel>() {
           @Override
           protected void initChannel(SocketChannel ch) {
-            ch.pipeline().addLast(trackIngressConnectionsHandler);
+            final ChannelPipeline pipeline = ch.pipeline();
+            pipeline.addLast(trackIngressConnectionsHandler);
             if (sniMapping != null) {
-              ch.pipeline().addLast(new SniHandler(sniMapping));
+              pipeline.addLast(new SniHandler(sniMapping));
             } else if (sslContext != null) {
-              ch.pipeline().addLast(sslContext.newHandler(ch.alloc()));
+              pipeline.addLast(sslContext.newHandler(ch.alloc()));
             }
-            ch.pipeline().addLast(new HttpServerCodec());
-            ch.pipeline().addLast(sanitizeHostHandler);
-            // logger sits between codec and rest so it sees header modifications
-            // from timeout and keep alive below
-            ch.pipeline().addLast(new RequestLoggingHandler(requestLogger));
-            ch.pipeline().addLast(new ClientTimeoutHandler(connectionConfig, metrics));
-            ch.pipeline().addLast(new HttpServerKeepAliveHandler());
-            // ch.pipeline().addLast(new LoggingHandler(LogLevel.INFO, ByteBufFormat.SIMPLE));
-            ch.pipeline().addLast(new IpTraitsHandler(ipTraitsLookup));
-//            ch.pipeline().addLast(new ReportIoErrorsHandler("downstream"));
-            // TODO: check and sanitize host header
-            ch.pipeline().addLast(new ChannelInboundHandlerAdapter() {
-              // strip port from host
-              @Override
-              public void channelRead(ChannelHandlerContext ctx, Object msg) throws Exception {
-                if (msg instanceof HttpRequest rq) {
-                  String host = rq.headers().get(HttpHeaderNames.HOST);
-                  if (host != null) {
-                    String []sa =  host.split(":");
-                    host = sa[0];
-                    rq.headers().set(HttpHeaderNames.HOST, host);
-                  }
-                }
-                super.channelRead(ctx, msg);
-              }
-            });
-            if (redirectHandler != null) {
-              ch.pipeline().addLast(redirectHandler);
-            }
-            ch.pipeline().addLast(admissionHandler);
-//            ch.pipeline().addLast(new LoggingHandler(LogLevel.INFO));
-            ch.pipeline().addLast(new DownstreamHandler(upstreamRouter, metrics));
+            pipeline.addLast(new HttpServerCodec());
+            addHttpHandlers(pipeline);
           }
         });
       int port = config.listen().port();
@@ -217,13 +221,40 @@ public class Proxy implements ProxyContext {
       f.channel().closeFuture().sync();
     } finally {
       bossGroup.shutdownGracefully();
-      workerGroup.shutdownGracefully();
+      shutdown();
     }
+  }
+
+  void shutdown() {
+    eventLoopGroup.shutdownGracefully();
+  }
+
+  void addHttpHandlers(ChannelPipeline pipeline) {
+    pipeline.addLast(sanitizeHostHandler);
+    // logger sits between codec and rest so it sees header modifications
+    // from timeout and keep alive below
+    pipeline.addLast(new RequestLoggingHandler(requestLogger));
+    pipeline.addLast(new ClientTimeoutHandler(connectionConfig, metrics));
+    pipeline.addLast(new HttpServerKeepAliveHandler());
+    // ch.pipeline().addLast(new LoggingHandler(LogLevel.INFO, ByteBufFormat.SIMPLE));
+    pipeline.addLast(new IpTraitsHandler(ipTraitsLookup));
+//            ch.pipeline().addLast(new ReportIoErrorsHandler("downstream"));
+    if (unservicedHostHandler != null) {
+      pipeline.addLast(unservicedHostHandler);
+    }
+    pipeline.addLast("siteSelector", siteSelectorHandler);
+    pipeline.addLast("protection", dummy404Handler);
+    pipeline.addLast("proxy", dummy404Handler);
   }
 
   @Override
   public EventLoopGroup eventLoopGroup() {
     return eventLoopGroup;
+  }
+
+  @Override
+  public ProxyMetrics metrics() {
+    return metrics;
   }
 
 }
